[package]
name = "multimedia_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.22.6"
gstreamer-video = "0.22.6"
gstreamer-app = "0.22.6"
gstreamer-audio = "0.22.6"
image = "0.24.9"
rodio = "0.19.0"
byteorder = "1.5.0"