[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bean = { path = "../bean" }
js_engine = { path = "../js_engine" }
bevy_egui = "0.27.0"
bevy = "0.13.2"
scraper = "0.19.0"
cssparser = "0.34.0"
serde_json = "1.0.116"