[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "../renderer" }
bean = { path = "../bean" }
network = { path = "../network" }
bevy_egui = "0.27.0"
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"